--- a/src/styles/chat.module.css
+++ b/src/styles/chat.module.css
@@ -70,7 +70,7 @@
 #chat-body {
   height: 60vh;
   padding: 15px 0;
-  position: relative;
+  /* position: relative; */
 }
 
 /* Chat Footer */
@@ -81,14 +81,25 @@
 
 #chat-input {
   border-radius: 50px;
+  padding: 7px 10px 7px 20px;
+  background: #efefef;
+  outline: none;
+}
+
+#chat-input input {
   font-size: 16px;
   line-height: 28px;
   border: none;
   color: #333333;
-  padding: 7px 20px;
-  width: 100%;
+  width: 90%;
   background: #efefef;
   outline: none;
+}
+
+#send-btn {
+  background: none;
+  border: none;
+  margin: 0 7px 0 13px;
 }
 
 #photo-upload-btn {
@@ -114,30 +125,25 @@
 
 /* Chat Message */
 
-.sent-msg {
-  display: inline-block;
-  background: #ec4747;
-  color: #ffffff;
+.chat-msg {
   padding: 10px 15px;
   font-size: 14px;
   margin: 5px 0;
-  border-radius: 20px 5px 20px 20px;
-  position: absolute;
-  right: 20px;
   max-width: 300px;
 }
 
+.sent-msg {
+  background: #ec4747;
+  color: #ffffff;
+  border-radius: 20px 5px 20px 20px;
+  margin: 0 20px 0 auto;
+}
+
 .received-msg {
-  display: inline-block;
   background: #efefef;
   color: #111111;
-  padding: 10px 15px;
-  font-size: 14px;
-  margin: 5px 0;
   border-radius: 5px 20px 20px 20px;
-  position: absolute;
-  left: 20px;
-  max-width: 300px;
+  margin: 0 auto 0 20px;
 }
 
 /* -------------  Media Queries ------------ */
