--- a/src/styles/modal.module.css
+++ b/src/styles/modal.module.css
@@ -18,7 +18,6 @@
   line-height: 17px;
   text-align: center;
   color: #787878;
-  margin-bottom: 35px;
 }
 
 .btn {
@@ -41,4 +40,5 @@
   background: #ffffff;
   color: #ec4747;
   margin-bottom: 12px !important;
+  margin-top: 15px;
 }
