--- a/client/src/styles/chat.module.css
+++ b/client/src/styles/chat.module.css
@@ -66,6 +66,12 @@
   overflow-x: hidden;
   transition: color 0.3s ease;
   color: rgba(0, 0, 0, 0);
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+}
+
+#chat-body::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
 
 #chat-body:hover {
@@ -84,6 +90,19 @@
   text-align: center;
   color: #4f4f4f;
   margin-top: 25%;
+}
+
+#start-chat-btn {
+  background: #ffffff;
+  border-radius: 10px;
+  padding: 8px 20px;
+  font-size: 17px;
+  color: #ec4747;
+  text-decoration: none;
+  margin-top: 50px;
+  border: 2px solid #ec4747;
+  margin-top: 20%;
+  text-align: center;
 }
 
 /* Chat Footer */
@@ -223,6 +242,7 @@
   #chat-container {
     border-radius: 20px 20px 0 0;
     margin-bottom: 0px;
+    height: 100vh;
   }
 
   #chat-header-icon-success {
@@ -261,6 +281,11 @@
 
   #failed-chat-body-text {
     font-size: 13px;
+    margin-top: 35%;
+  }
+
+  #start-chat-btn {
+    font-size: 14px;
     margin-top: 35%;
   }
 
