--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,3 +22,13 @@ body:hover {
 *::-webkit-scrollbar-thumb {
   box-shadow: inset 0 0 0 10px;
 }
+
+#container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+#content {
+  flex: 1;
+}
