--- a/client/src/styles/home.module.css
+++ b/client/src/styles/home.module.css
@@ -19,11 +19,11 @@
 #start-chat-btn {
   background: #ec4747;
   border-radius: 10px;
-  padding: 8px 20px;
-  font-size: 17px;
+  padding: 7px 15px;
+  font-size: 16px;
   color: #ffffff;
   text-decoration: none;
-  margin-top: 50px;
+  margin-top: 40px;
   border: none;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
@@ -32,6 +32,14 @@
   width: 450px;
   margin-left: auto;
   display: block;
+}
+
+#compliance-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 21px;
+  color: #787878;
 }
 
 #developer-label {
