--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,12 +23,12 @@ body:hover {
   box-shadow: inset 0 0 0 10px;
 }
 
-#container {
+#app {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
 
-#content {
+#container {
   flex: 1;
 }
