--- a/client/src/styles/chat.module.css
+++ b/client/src/styles/chat.module.css
@@ -2,7 +2,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
   padding: 0;
-  margin-bottom: 50px;
+  height: 70vh;
 }
 
 /* Chat Header */
@@ -60,7 +60,6 @@
 /* Chat Body */
 
 #chat-body {
-  height: 60vh;
   padding: 20px 0 0 0;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -198,10 +197,6 @@
 /* -------------  Media Queries ------------ */
 
 @media only screen and (max-width: 768px) {
-  #chat-container {
-    margin-bottom: 35px;
-  }
-
   #chat-header {
     padding: 20px 25px;
   }
@@ -241,8 +236,11 @@
 @media only screen and (max-width: 425px) {
   #chat-container {
     border-radius: 20px 20px 0 0;
-    margin-bottom: 0px;
     height: 100vh;
+  }
+
+  #chat-header {
+    border-radius: 0px;
   }
 
   #chat-header-icon-success {
