--- a/client/src/styles/chat.module.css
+++ b/client/src/styles/chat.module.css
@@ -2,7 +2,8 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
   padding: 0;
-  height: 70vh;
+  height: 75vh;
+  margin-bottom: 30px;
 }
 
 /* Chat Header */
