--- a/client/src/styles/chat.module.css
+++ b/client/src/styles/chat.module.css
@@ -89,7 +89,6 @@
   font-size: 15px;
   text-align: center;
   color: #4f4f4f;
-  margin-top: 25%;
 }
 
 #start-chat-btn {
@@ -238,6 +237,7 @@
   #chat-container {
     border-radius: 20px 20px 0 0;
     height: 100vh;
+    margin-bottom: 0;
   }
 
   #chat-header {
@@ -280,7 +280,6 @@
 
   #failed-chat-body-text {
     font-size: 13px;
-    margin-top: 35%;
   }
 
   #start-chat-btn {
