--- a/client/src/styles/chat.module.css
+++ b/client/src/styles/chat.module.css
@@ -169,14 +169,14 @@
   display: inline-block;
 }
 
-.sent-msg {
+.sender-msg {
   background: #ec4747;
   color: #ffffff;
   border-radius: 20px 5px 20px 20px;
   margin: 10px 20px 10px auto;
 }
 
-.received-msg {
+.receiver-msg {
   background: #efefef;
   color: #111111;
   border-radius: 5px 20px 20px 20px;
