--- a/client/src/styles/home.module.css
+++ b/client/src/styles/home.module.css
@@ -28,6 +28,10 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
+#start-chat-btn:hover {
+  background: #e44343;
+}
+
 #chat-illustration {
   width: 450px;
   margin-left: auto;
