--- a/client/src/styles/footer.module.css
+++ b/client/src/styles/footer.module.css
@@ -1,5 +1,19 @@
 footer {
   background: #ec4747;
+  padding: 10px 0;
+}
+
+.footer-links {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 23px;
+  color: white;
+  text-decoration: none;
+  margin: 0 20px 7px 20px;
+}
+
+.footer-links:hover {
+  color: black;
 }
 
 footer p {
@@ -10,5 +24,4 @@ footer p {
   color: #fff2f2;
   margin: 0;
   text-align: center;
-  padding: 10px 0;
 }
