--- a/client/src/styles/blog.module.css
+++ b/client/src/styles/blog.module.css
@@ -7,7 +7,7 @@
 }
 
 #blog-container {
-  max-width: 700px;
+  max-width: 800px;
   margin: auto;
   padding-top: 10px;
 }
@@ -25,7 +25,11 @@
 }
 
 #blog-container section {
-  margin-top: 25px;
+  margin-top: 20px;
+  padding: 25px 30px;
+  border-radius: 10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
 #start-chat-btn {
@@ -48,10 +52,11 @@
 
 @media only screen and (max-width: 425px) {
   #title {
-    font-size: 32px;
+    font-size: 30px;
   }
 
-  #blog-container {
-    padding: 0 15px;
+  #blog-container section {
+    margin-top: 10px;
+    padding: 25px;
   }
 }
