--- a/client/src/styles/chat.module.css
+++ b/client/src/styles/chat.module.css
@@ -114,6 +114,11 @@
 
 #chat-footer {
   padding: 15px 20px;
+  -webkit-box-shadow: 0 -3px 8px -5px rgb(0, 0, 0, 0.35);
+  -moz-box-shadow: 0 -3px 8px -5px rgb(0, 0, 0, 0.35);
+  box-shadow: 0 -3px 8px -5px rgb(0, 0, 0, 0.35);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 #chat-input {
@@ -202,6 +207,50 @@
   text-align: center;
   display: block;
   margin: auto;
+}
+
+/* Chat Typing Indicator */
+
+.typing-indicator {
+  background-color: #efefef;
+  will-change: transform;
+  width: auto;
+  border-radius: 5px 20px 20px 20px;
+  padding: 12px;
+  display: table;
+  margin: 5px auto 5px 20px;
+  position: relative;
+  animation: 2s bulge infinite ease-out;
+}
+
+.typing-indicator span {
+  height: 7px;
+  width: 7px;
+  float: left;
+  margin: 0 1px;
+  background-color: #9e9ea1;
+  display: block;
+  border-radius: 50%;
+  opacity: 0.4;
+}
+.typing-indicator span:nth-of-type(1) {
+  animation: 1s blink infinite 0.3333s;
+}
+.typing-indicator span:nth-of-type(2) {
+  animation: 1s blink infinite 0.6666s;
+}
+.typing-indicator span:nth-of-type(3) {
+  animation: 1s blink infinite 0.9999s;
+}
+@keyframes blink {
+  50% {
+    opacity: 1;
+  }
+}
+@keyframes bulge {
+  50% {
+    transform: scale(1.05);
+  }
 }
 
 /* -------------  Media Queries ------------ */
